--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -23,16 +23,25 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'com.baomidou:mybatis-plus-spring-boot3-starter:3.5.5'
 	implementation 'org.flywaydb:flyway-core'
 	implementation 'org.flywaydb:flyway-mysql'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'me.paulschwarz:spring-dotenv:4.0.0'
+	implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'
+	implementation 'com.h2database:h2:2.2.224'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.security:spring-security-test'
+	testImplementation 'com.baomidou:mybatis-plus-spring-boot3-starter-test:3.5.5'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 }
 
-tasks.named('test') {
+test {
 	useJUnitPlatform()
+	testLogging.showStandardStreams = true
 }
