--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/issuetracker
 spring.datasource.username=root
 spring.datasource.password=
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.enabled=false
 
+application.security.jwt.secret=${JWT_SECRET}
+application.security.jwt.expiration=1800000
+application.security.jwt.refresh-expiration=604800000
